kubernetes/mariadb.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: statfive
  name: mariadb
  namespace: statfive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statfive
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: statfive
        tier: mariadb
    spec:
      containers:
        - image: mariadb:10.5.9
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mariadb-storage
            - name: mariadb-initdb
              mountPath: "/docker-entrypoint-initdb.d"
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-claim
        - name: mariadb-initdb
          configMap:
            name: mariadb-initdb

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: statfive
  name: mariadb
  namespace: statfive
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: statfive
    tier: mariadb
