kubernetes/nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: statfive
  name: nginx
  namespace: statfive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statfive
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: statfive
        tier: frontend
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - mountPath: "/etc/nginx/conf.d"
              name: nginx-storage
            - mountPath: "/etc/letsencrypt/live/statfive.fr"
              name: letsencrypt-storage
      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-claim
        - name: letsencrypt-storage
          persistentVolumeClaim:
            claimName: letsencrypt-claim

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: statfive
  name: nginx
  namespace: statfive
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    app: statfive
    tier: frontend
