kubernetes/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: statfive
  name: phpmyadmin
  namespace: statfive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statfive
      tier: phpmyadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: statfive
        tier: phpmyadmin
    spec:
      containers:
        - image: phpmyadmin/phpmyadmin
          name: phpmyadmin
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: statfive
  name: phpmyadmin
  namespace: statfive
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: statfive
    tier: phpmyadmin
